--- a/manifest.json
+++ b/manifest.json
@@ -1,26 +1,30 @@
 {
-    "manifest_version": 3,
-    "name": "Codeforces Challenge Extension",
-    "version": "1.0",
-    "description": "Challenge a friend to solve Codeforces problems!",
-    "permissions": ["storage", "activeTab", "scripting"],
-    "host_permissions": ["https://codeforces.com/*"],
-    "background": {
-      "service_worker": "background.js"
-    },
-    "content_scripts": [
-      {
-        "matches": ["https://codeforces.com/*"],
-        "js": ["content.js"]
-      }
-    ],
-    "action": {
-      "default_popup": "popup.html",
-      "default_icon": {
-        "16": "icons/icon16.png",
-        "48": "icons/icon48.png",
-        "128": "icons/icon128.png"
-      }
+  "manifest_version": 3,
+  "name": "Codeforces Challenge Extension",
+  "version": "1.0",
+  "description": "Challenge a friend to solve Codeforces problems!",
+  "permissions": ["storage", "activeTab", "scripting"],
+  "host_permissions": ["https://codeforces.com/*"],
+  "background": {
+    "service_worker": "background.js"
+  },
+  "content_scripts": [
+    {
+      "matches": ["https://codeforces.com/*"],
+      "js": ["content.js"]
     }
+  ],
+  "action": {
+    "default_popup": "popup.html",
+    "default_icon": {
+      "16": "icons/icon16.png",
+      "48": "icons/icon48.png",
+      "128": "icons/icon128.png"
+    }
+  },
+  "icons": {
+    "16": "icons/icon16.png",
+    "48": "icons/icon48.png",
+    "128": "icons/icon128.png"
   }
-  
+}
